deployment/k8s/transparent-proxy/base/istio/authorizationpolicy/allow-ingress-to-lisa-transparent-proxy.yaml

apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-transparent-proxy
spec:
  selector:
    matchLabels:
      io.kompose.service: lisa-transparent-proxy
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/istio-ingress/sa/istio-ingress"]
      to:
        - operation:
            methods: ["GET","POST"]
